[tool.poetry]
name = "lpt"
version = "0.1.0"
description = ""
authors = ["Chris Patterson <cpatterson@microsoft.com>"]

[tool.poetry.scripts]
lpt = "lpt.main:main"

[tool.poetry.dependencies]
python = "^3.8"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
